--- a/README.adoc
+++ b/README.adoc
@@ -27,7 +27,7 @@ The Asciidoctor attribute `{generated}` is set by the Gradle script to `target/a
 
 [source]
 ----
-mvn swagger2markup:convertSwagger2markup process-resources
+mvn process-resources
 ----
 
 See `target/asciidoc/html5/index.html` to check the generated HTML report.
